Revert "admin log in through config and javadoc"